--- a/homepage.css
+++ b/homepage.css
@@ -8,35 +8,24 @@ body, html {
   }
   
   .bg-img {
-    /* The image used */
-    background-image: url(logo.png);
-    width: 250px;
-    height: 350px;
-    margin-left: 300px;
-    margin-top: 250px;
-    /* position: absolute; */
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat bottom right;
-    background-size: cover;
-    position: relative;
-  }
-  
-  /* Add styles to the form container */
-  .container {
     position: absolute;
-    right: 0;
-    margin-right: 420px;
+    margin-left: 200px;
+    margin-right: 1px;
+    margin-top: 180px;
+  }
+
+  .login{
+    position: absolute;
+    margin-left: 720px;
     margin-top: 230px;
-    max-width: 300px;
-    padding: 16px;
+    width: 300px;
+    height: 800px;
     background-color: white;
   }
-  
-  /* Full-width input fields */
+
   input[type=text], input[type=password] {
     width: 100%;
+    font-size: 18;
     padding: 15px;
     margin: 5px 0 22px 0;
     border: none;
@@ -48,17 +37,21 @@ body, html {
     outline: none;
   }
   
-  /* Set a style for the submit button */
-  .btn {
+
+  .regis{
+    margin-left: 210px;
+  }
+
+  .log-btn button{
     background-color: #4CAF50;
     color: white;
-    padding: 16px 20px;
+    padding: 10px 115px;
     border: none;
     cursor: pointer;
     width: 100%;
     opacity: 0.9;
   }
-  
-  .btn:hover {
+
+  .log-btn button:hover {
     opacity: 1;
   }
