--- a/homepage.css
+++ b/homepage.css
@@ -1,102 +1,110 @@
 body, html {
-    height: 100%;
-    font-family: "Times New Roman", Times, serif;
-  }
-  
+  overflow: hidden;
+  height: 100%;
+  font-family: "Times New Roman", Times, serif;
+}
+
   * {
     box-sizing: border-box;
   }
-  
+
   .bg-img {
     position: absolute;
-    margin-left: 200px;
-    margin-right: 1px;
-    margin-top: 180px;
+    margin-left: 250px;
+
+    margin-top: 100px;
   }
 
   .login{
     position: absolute;
     margin-left: 720px;
-    margin-top: 230px;
+    margin-top: 160px;
     width: 300px;
     height: 800px;
     background-color: white;
+    z-index: 1;
   }
 
-  input[type=text], input[type=password] {
-    width: 100%;
-    font-size: 18;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
+    input[type=text], input[type=password] {
+      width: 100%;
+      font-size: 18;
+      padding: 15px;
+      margin: 5px 0 22px 0;
+      border: none;
+      background: #f1f1f1;
+    }
 
-  .regis{
-    margin-left: 210px;
-  }
+    input[type=text]:focus, input[type=password]:focus {
+      background-color: #ddd;
+      outline: none;
+    }
 
-  .log-btn button{
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 115px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-  }
 
-  .log-btn button:hover {
-    opacity: 1;
-  }
+    .regis{
+      margin-left: 210px;
+      cursor: pointer;
+    }
 
-  .fb-btn button{
-    background-color: #3B5998;
-    color: white;
-    padding: 10px 80px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-    white-space: nowrap;
+    .log-btn button{
+      background-color: #4CAF50;
+      color: white;
+      height: 50px;
+      padding: auto;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      opacity: 0.9;
+      border-radius: 8px;
   }
 
-  .fb-btn button:hover {
-    opacity: 1;
-  }
+    .log-btn button:hover {
+      opacity: 1;
+    }
 
-  .tw-btn button{
-    background-color: #55ACEE;
-    color: white;
-    padding: 10px 80px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-    white-space: nowrap;
-  }
+    .fb-btn button{
+      background-color: #3B5998;
+      color: white;
+      height: 50px;
+      padding: auto;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      opacity: 0.9;
+      border-radius: 8px;
+    }
 
-  .tw-btn button:hover {
-    opacity: 1;
-  }
+    .fb-btn button:hover {
+      opacity: 1;
+    }
 
-  .gg-btn button{
-    background-color: #dd4b39;
-    color: white;
-    padding: 10px 80px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-    white-space: nowrap;
-  }
+    .tw-btn button{
+      background-color: #55ACEE;
+      color: white;
+      height: 50px;
+      padding: auto;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      opacity: 0.9;
+      border-radius: 8px;
+    }
 
-  .gg-btn button:hover {
-    opacity: 1;
-  }
+    .tw-btn button:hover {
+      opacity: 1;
+    }
+
+    .gg-btn button{
+      background-color: #dd4b39;
+      color: white;
+      height: 50px;
+      padding: auto;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      opacity: 0.9;
+      border-radius: 8px;
+    }
+
+    .gg-btn button:hover {
+      opacity: 1;
+    }
