--- a/explorer/templates/homepage.html
+++ b/explorer/templates/homepage.html
@@ -1,21 +1,17 @@
-<html>
+{% load staticfiles %}
 <head>
-<link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<script src="js/bootstrap.min.css"></script>
-<script src="js/jquery.js"></script>
-</head>
-<head>
-<link rel="stylesheet" href="homepage.css"/>
-<link rel="stylesheet" href="registerpage.css"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="registerpage.js"></script>
-<meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registerpage.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="{% static 'js/registerpage.js' %}"></script>
+    <meta charset="utf-8">
 
 <title>Explorer| the application for evaluating</title>
 <body>
   <div class="bg-img">
-    <img src="logo.png"  width="500"  height="500">
+    <img src="{% static 'logo.png' %}" width="500"  height="500">
   </div>
   <div class="login">
     <form action="/action_page.php" class="container">
@@ -75,4 +71,3 @@
     </div>
 </body>
 </head>
-</html>
