--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,73 +1,52 @@
-{% load staticfiles %}
-<head>
-    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
-    <link rel="stylesheet" href="{% static 'css/registerpage.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
+{% extends 'base.html' %}
+{% load static %}
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="{% static 'js/registerpage.js' %}"></script>
-    <meta charset="utf-8">
 
-<title>Explorer| the application for evaluating</title>
 <body>
+    {% block content %}
   <div class="bg-img">
     <img src="{% static 'logo.png' %}" width="500"  height="500">
   </div>
+
   <div class="login">
-    <form action="/action_page.php" class="container">
+    <form method="post" action="/login/home" class="container">
       <h1>Login</h1>
+      {% csrf_token %}
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="text" name="username" placeholder="Enter Email" name="email" required>
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-  
+      <input type="password" name="password" placeholder="Enter Password" name="psw" required>
       <div class = "regis">
-          <p style="line-height: 50%;" onclick="openForm()"><a>Register?</a></p>
+        <p style="line-height: 50%;" onclick="openForm()"><a>Register?</a></p>
       </div>
       <div class= "log-btn">
-          <button>Login</button>
-      </div>
-      <div class= "fb-btn">
-          <button style="margin-top: 10px;">Login with Facebook</button>
-      </div>
-      <div class= "tw-btn">
-          <button style="margin-top: 10px;">Login with Twitter</button>
-      </div>
-      <div class= "gg-btn">
-          <button style="margin-top: 10px;">Login with Google+</button>
+        <button>Login</button>
       </div>
     </form>
   </div>
+
   <div class = "formpopup"id = "myForm">
-      <div class="form-container">
-        <span class="close" onclick="closeForm()">&times;</span>
-        <h1 style="font-size: 32; margin-top: 20px;"> Create your account</h1>
-        <label for="username"><b></b></label><br>
-        <i class="fa fa-user icon"></i>
-        <input type="text" placeholder="Username" name="username" required><br>
-  
-        <!-- <label for="firstname"><b></b></label><br>
-        <input type="text" placeholder="Firstname" name="firstname" required><br>
-  
-        <label for="lastname"><b></b></label><br>
-        <input type="text" placeholder="Lastname" name="lastname" required><br> -->
-  
-        <label for="email"><b></b></label><br>
-        <i class="fa fa-envelope icon"></i>
-        <input type="text" placeholder="Email" name="email" required><br>
-  
-        <label for="psw"><b></b></label><br>
-        <i class="fa fa-key icon"></i>
-        <input type="password" placeholder="Password" name="psw" required><br>
-  
-        <label for="conpsw"><b></b></label><br>
-        <i class="fa fa-key icon"></i>
-        <input type="password" placeholder="Confirm Password " name="conpsw" required><br>
-    
-        <div class="regis-btn">
-          <button type="button" style="margin-top: 30px;">Register</button>
-        </div>
+    <div class="form-container">
+      <span class="close" onclick="closeForm()">&times;</span>
+      <h1 style="font-size: 32; margin-top: 20px;"> Create your account</h1>
+      <label for="username"><b></b></label><br>
+      <i class="fa fa-user icon"></i>
+      <input type="text" placeholder="Username" name="username" required><br>
+      <label for="email"><b></b></label><br>
+      <i class="fa fa-envelope icon"></i>
+      <input type="text" placeholder="Email" name="email" required><br>
+      <label for="psw"><b></b></label><br>
+      <i class="fa fa-key icon"></i>
+      <input type="password" placeholder="Password" name="psw" required><br>
+      <label for="conpsw"><b></b></label><br>
+      <i class="fa fa-key icon"></i>
+      <input type="password" placeholder="Confirm Password " name="conpsw" required><br>
+      <div class="regis-btn">
+        <button type="button" style="margin-top: 30px;">Register</button>
       </div>
     </div>
+  </div>
+  {% endblock content%}
 </body>
-</head>
+
+
