--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,6 +24,10 @@
       </div>
     </form>
   </div>
+  <div class= "gg-btn">
+    <a href="{% url 'social:begin' 'google-oauth2' %}"></a>
+    <button>Login with Google+</button>
+  </div>
 
   <div class = "formpopup"id = "myForm">
     <div class="form-container">
