--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -59,48 +59,19 @@ body, html {
       opacity: 1;
     }
 
-    .fb-btn button{
-      background-color: #3B5998;
-      color: white;
-      height: 50px;
-      padding: auto;
-      border: none;
-      cursor: pointer;
-      width: 100%;
-      opacity: 0.9;
-      border-radius: 8px;
-    }
-
-    .fb-btn button:hover {
-      opacity: 1;
-    }
-
-    .tw-btn button{
-      background-color: #55ACEE;
-      color: white;
-      height: 50px;
-      padding: auto;
-      border: none;
-      cursor: pointer;
-      width: 100%;
-      opacity: 0.9;
-      border-radius: 8px;
-    }
-
-    .tw-btn button:hover {
-      opacity: 1;
-    }
-
     .gg-btn button{
+      position: absolute;
       background-color: #dd4b39;
       color: white;
       height: 50px;
-      padding: auto;
       border: none;
       cursor: pointer;
-      width: 100%;
+      width: 270px;
       opacity: 0.9;
       border-radius: 8px;
+      margin-left: 735px;
+      margin-top: 530px;
+      z-index: 2;
     }
 
     .gg-btn button:hover {
