redirect to google login

--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -24,8 +24,7 @@
     </form>
   </div>
   <div class= "gg-btn">
-    <a href="{% url 'social:begin' 'google-oauth2' %}"></a>
-    <button>Login with Google+</button>
+    <button onclick="window.location.href='/social-auth/login/google-oauth2/'">Login with Google+</button></br>
   </div>
 
   <div class = "formpopup" id = "myForm">
