--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -24,7 +24,7 @@
     </form>
   </div>
   <div class= "gg-btn">
-    <button onclick="window.location.href='/social-auth/login/google-oauth2/'">Login with Google+</button></br>
+    <button onclick="window.location.href='/social-auth/login/google-oauth2/'">Login with Google+</button>
   </div>
 
   <div class = "formpopup" id = "myForm">
