--- a/static/css/loginpage.css
+++ b/static/css/loginpage.css
@@ -19,7 +19,7 @@ body, html {
     margin-left: 720px;
     margin-top: 160px;
     width: 300px;
-    height: 800px;
+    height: 100%;
     background-color: white;
     z-index: 1;
   }
@@ -79,3 +79,4 @@ body, html {
     .gg-btn button:hover {
       opacity: 1;
     }
+
