add menu bar with icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
 <head>
     <link rel="stylesheet" href="{% static 'css/loginpage.css' %}">
     <link rel="stylesheet" href="{% static 'css/registerpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="{% static 'js/registerpage.js' %}"></script>
+    <script src="https://kit.fontawesome.com/e503b97c7e.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
 
 </head>
