--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,32 +1,54 @@
-body, html {
-    overflow: hidden;
-    height: 100%;
-    font-family: "Times New Roman", Times, serif;
-  }
+body {
+  overflow: hidden;
+  height: 100%;
+  font-family: "Times New Roman", Times, serif;
+}
 
-    .icon-bar {
-    width: 100px; 
-    background-color: #555; 
-    overflow: auto;
-    text-align: center;
-    color: white;
-  }
-  
-    .icon-bar a {
-    display: block; 
-    padding: 18px; 
-    transition: all 0.3s ease; 
-    color: white;
-    font-size: 18px;
-    white-space: nowrap;
-  }
-  
-    .icon-bar a:hover {
-    background-color: #E8E3E3; 
-  }
-  
-    .active {
-    background-color: #4CAF50; 
-  }
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
 
-    
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #2E4053;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
