--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="{% static 'js/registerpage.js' %}"></script>
+    <script src="{% static 'js/home.js' %}"></script>
     <script src="https://kit.fontawesome.com/e503b97c7e.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
 
