edit menu bar and add profile icon

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,15 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="#"><i class="fa fa-home"><br>Home</i></a>
-            <a href="#"><i class="fas fa-folder-plus"><br>Create</i></a> 
-            <a href="#"><i class="fas fa-trash-alt"><br>Delete</i></a> 
-            <a href="#"><i class="fas fa-sign-out-alt"><br>Log out</i></a> 
+            <a href="#"><i class="fa fa-home fa-lg"><br>Home</i></a>
+            <br>
+            <a href="#"><i class="fas fa-user-circle fa-lg"><br>Profile</i></a>
+            <br>
+            <a href="#"><i class="fas fa-folder-plus fa-lg"><br>Create</i></a> 
+            <br>
+            <a href="#"><i class="fas fa-trash-alt fa-lg"><br>Delete</i></a> 
+            <br>
+            <a href="#"><i class="fas fa-sign-out-alt fa-lg"><br>Log out</i></a> 
         </div>
     </div>
     {% endblock content %}
