--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,8 +5,8 @@ body {
 }
 
 .overlay {
-  height: 100%;
-  width: 0;
+  height: 60%;
+  width: 0%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -19,7 +19,7 @@ body {
 
 .overlay-content {
   position: relative;
-  top: 25%;
+  top: 20%;
   width: 100%;
   text-align: center;
 }
@@ -30,25 +30,21 @@ body {
   font-size: 20px;
   color: #818181;
   display: block;
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .overlay a:hover, .overlay a:focus {
-  color: #2E4053;
+  color: #7FB3D5;
 }
 
 .overlay .closebtn {
   position: absolute;
-  top: 20px;
+  padding-top: 10px;
   right: 45px;
   font-size: 60px;
 }
 
 @media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
+  .overlay {padding-top: 15px;}
+  .overlay a {font-size: 18px;}
 }
