--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 <body>
     {% block content %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
