--- a/survey/templates/survey/home.html
+++ b/survey/templates/survey/home.html
@@ -5,6 +5,7 @@
 
 
 {% block content %}
-
-hello
+<div class= "welcome-text">
+    <h1>Explorer - Get Started!</h1>
+    <a class="homebutton" style="vertical-align:middle" href="{% url 'survey' %}"><span>Get started!</span></a>
 {% endblock %}
