--- a/survey/templates/survey/base.html
+++ b/survey/templates/survey/base.html
@@ -17,13 +17,13 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="{% url 'home' %}"><i class="fa fa-home fa-lg"><br>Home</i></a>
+            <a href="{% url 'home' %}"><i class="fa fa-home fa-lg"></i><br/>Home</a>
             <br>
-            <a href="{% url 'survey' %}"><i class="fas fa-user-circle fa-lg"><br>Create and Results</i></a>
+            <a href="{% url 'survey' %}"><i class="fas fa-user-circle fa-lg"></i><br/>Create and Results</a>
             <br>
-            <a href="{% url 'survey_vote' %}"><i class="fas fa-poll fa-lg"><br>Vote</i></a> 
+            <a href="{% url 'survey_vote' %}"><i class="fas fa-poll fa-lg"></i><br/>Vote</a> 
             <br>
-            <a href=><i class="fas fa-sign-out-alt fa-lg"><br>Log out</i></a> 
+            <a href=><i class="fas fa-sign-out-alt fa-lg"></i><br/>Log out</a> 
         </div>
     </div>
   
