edit userinfo class

--- a/survey/static/css/home.css
+++ b/survey/static/css/home.css
@@ -9,6 +9,8 @@ body {
 }
 
 .welcome-text {
+  position: absolute;
+  width: 100%;
   text-align: center;
   font-size: 30px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -58,5 +60,16 @@ body {
   right: 0;
 }
 
-
+.userinfo {
+  position: absolute;
+  display: block;
+  text-align: right;
+  padding-right: 30px;
+  padding-top: 15px;
+  height: 100%;
+  width: 300px;
+  top: 0px;
+  right: 0px;
+  z-index: 999;
+}
 
