--- a/survey/templates/survey/home.html
+++ b/survey/templates/survey/home.html
@@ -8,4 +8,11 @@
 <div class= "welcome-text">
     <h1>Explorer - Get Started!</h1>
     <a class="homebutton" style="vertical-align:middle" href="{% url 'survey' %}"><span>Get started!</span></a>
+</div>
+    
+<div class="userinfo">
+    <h1 style="font-size: 22px;">Welcome,</h1>
+    <i class="fas fa-user-circle fa-2x"></i>&nbsp;&nbsp;{{ request.user.username }}</div>
+</div>
+
 {% endblock %}
