--- a/survey/templates/survey/base.html
+++ b/survey/templates/survey/base.html
@@ -25,7 +25,7 @@
             <br>
             <a href="{% url 'survey_vote' %}"><i class="fas fa-poll fa-lg"></i><br/>Vote</a> 
             <br>
-            <a href=><i class="fas fa-sign-out-alt fa-lg"></i><br/>Log out</a> 
+            <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt fa-lg"></i><br/>Log out</a> 
         </div>
     </div>
   
