--- a/survey/templates/survey/survey_assignment.html
+++ b/survey/templates/survey/survey_assignment.html
@@ -2,16 +2,13 @@
 {% block content %}
 
 <section class="section">
-  <div class="container">
-    <h1 class="title has-text-centered">
-      Django Survey
-    </h1>
+  <div class="container2">
+  
 
-    <div class="columns">
+    <div class="content2">
       <div class="column is-offset-2 is-8">
-        <h2 class="subtitle is-size-4">
-          Survey: {{ survey_assignment.survey.title }}
-        </h2>
+        <h2 class="survey_title">Survey: {{ survey_assignment.survey.title }}</h2>
+        <br>
         {% if validation_error %}
           <p>{{ validation_error }}</p>
         {% endif %}
@@ -37,7 +34,7 @@
           {% if survey_assignment.survey_responses.count == 0 %}
           <div class="field">
             <div class="control">
-              <button class="button is-link">Submit</button>
+              <button class="button-submit2">Submit</button>
             </div>
           </div>
           {% else %}
