--- a/survey/static/css/create.css
+++ b/survey/static/css/create.css
@@ -1,10 +1,23 @@
 .container2 {
+    /* text-align: center; */
+    font-size: 30px;
+}
+.container3 {
     text-align: center;
     font-size: 30px;
 }
 
 .field {
     text-align: center;
+}
+input[type=text]{
+    width: 100%;
+    font-size: 18;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: rgb(93, 111, 121);
+    
 }
 
 .content2 {
@@ -15,12 +28,13 @@
     left: 20%;
     padding: 60px;
     padding-top: 50px;
-    background-color: rgba(255,255,255,0.5);
-    opacity: 0.7;
+    background-color: white;
     overflow: scroll;
     font-size: 18px;
     color: black;
 }
+
+    
 
 .button-submit {
     display: inline-block;
@@ -36,3 +50,9 @@
     cursor: pointer;
     margin: 5px;
 }
+
+
+.field{
+    padding-right: 100%;
+}
+
