--- a/survey/templates/survey/base.html
+++ b/survey/templates/survey/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{% static 'css/surveypage.css' %}">
         <link rel="stylesheet" href="{% static 'css/create.css' %}">
         <link rel="stylesheet" href="{% static 'css/assignment.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Results.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="{% static 'js/home.js' %}"></script>
         <script src="https://kit.fontawesome.com/e503b97c7e.js" crossorigin="anonymous"></script>
