--- a/survey/templates/survey/survey_results.html
+++ b/survey/templates/survey/survey_results.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section class="section">
-  <div class="container">
+  <div class="container4">
     <h1 class="title has-text-centered">
       Django Survey
     </h1>
